--- a/index.html
+++ b/index.html
@@ -10,16 +10,43 @@
      <body>
      <h1 class=title> Dream Team </h1>
      <div class=container>
+    
     <div class="employee">
       <div class="name-and-title">
-        <h2 class="name">Name: k</h2>
+        <h2 class="name"> Name: Manager Kweku</h2>
+        <h3 class="role"> Role: Manager</h3>
+      </div>
+      <div class="employee-info">
+        <ul class="info list">
+          <li class="id"> ID: undefined</li>
+          <li class="email"> Email: manager@kweku</li>
+          <li class="officeNumber"> Office Number: 2</li>
+        </ul>
+      </div>
+    </div> 
+    <div class="employee">
+      <div class="name-and-title">
+        <h2 class="name">Name: Engineer Kweku</h2>
         <h3 class="role">Role: Engineer</h3>
       </div>
       <div class="employee-info">
         <ul class="info list">
           <li class="id">ID: undefined</li>
-          <li class="email">Email: k</li>
-          <li class="GitHub">GitHub: k</li>
+          <li class="email">Email: engineer@kweku</li>
+          <li class="GitHub">GitHub: KwekusGit</li>
+        </ul>
+      </div>
+    </div> 
+    <div class="employee">
+      <div class="name-and-title">
+        <h2 class="name">Name: Intern Kweku</h2>
+        <h3 class="role">Role: Intern</h3>
+      </div>
+      <div class="employee-info">
+        <ul class="info list">
+          <li class="id">ID: undefined</li>
+          <li class="email">Email: intern@kweku</li>
+          <li class="school">School: Kweku's School</li> 
         </ul>
       </div>
     </div> </div></body></html>
